# test-driven-c-learning

./: CMakeLists.txt  CMakePresets.json  README.md  TestAggregateTypes.c  TestFunction.c  TestOperators.c  TestPointer.c  TestPreprocessor.c  TestStatement.c  TestStdlib.c  TestTokens.c  main.c
test_runners/: TestAggregateTypes_Runner.c  TestFunction_Runner.c  TestOperators_Runner.c  TestPointer_Runner.c  TestPreprocessor_Runner.c  TestStatement_Runner.c  TestStdlib_Runner.c  TestTokens_Runner.c
