cmake_minimum_required(VERSION 3.10.0)
project(test-driven-c-learning VERSION 0.1.0 LANGUAGES C)
enable_testing()
include_directories(Unity)
add_executable(test_operators Unity/unity.c TestOperators.c test_runners/TestOperators_Runner.c)
add_executable(test_statement Unity/unity.c TestStatement.c test_runners/TestStatement_Runner.c)
add_test(NAME TestOperators COMMAND test_operators)
add_test(NAME TestStatement COMMAND test_statement)
