cmake_minimum_required(VERSION 3.10.0)
project(test-driven-c-learning VERSION 0.1.0 LANGUAGES C)
enable_testing()
include_directories(Unity)
add_executable(test_operators Unity/unity.c TestOperators.c test_runners/TestOperators_Runner.c)
add_executable(test_statement Unity/unity.c TestStatement.c test_runners/TestStatement_Runner.c)
add_executable(test_function Unity/unity.c TestFunction.c test_runners/TestFunction_Runner.c)
add_executable(test_pointer Unity/unity.c TestPointer.c test_runners/TestPointer_Runner.c)
add_executable(test_aggregate_types Unity/unity.c TestAggregateTypes.c test_runners/TestAggregateTypes_Runner.c)
add_executable(test_tokens Unity/unity.c TestTokens.c test_runners/TestTokens_Runner.c)
add_test(NAME TestOperators COMMAND test_operators)
add_test(NAME TestStatement COMMAND test_statement)
add_test(NAME TestFunction COMMAND test_function)
add_test(NAME TestPointer COMMAND test_pointer)
add_test(NAME TestAggregateTypes COMMAND test_aggregate_types)
add_test(NAME TestTokens COMMAND test_tokens)
